fix: body background-color to avoid gap bettwen footer

--- a/frontend-apps/14/css/styles.css
+++ b/frontend-apps/14/css/styles.css
@@ -9,9 +9,7 @@ body, td, th, p {
 }
 
 body {
-  background-color: #fdfdfd;
-  margin: 0;
-  position: relative;
+  background-color: #f3f3f3;
 }
 
 ul, li {
